[package]
name = "array-bytes"
version = "1.4.2" # Fake new version
edition = "2018"
description = "array-bytes"
homepage = "https://array-bytes.l2ust.world"
license = "GPL-3.0"
repository = "https://github.com/l2ust/array-bytes"

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1.0"
